add angular code

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,9 +1,9 @@
 <div th:fragment="copy" th:remove="tag">
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="#">
-    <img src="images/brand.png" width="60" height="50" class="d-inline-block align-top" alt=""></img>
+    <!-- <img src="images/brand.png" width="60" height="50" class="d-inline-block align-top" alt=""></img> -->
   </a>
-      <a class="navbar-brand" href="#">Black Mesa Medical</a>
+      <a class="navbar-brand" href="#">Dev Test Site</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -23,7 +23,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" th:href="@{/help/contact}">Sub Directory</a>
-              <a class="dropdown-item" th:href="@{/page-change}">Page Change</a>
+              <a class="dropdown-item" th:href="@{/actors}">Actors</a>
             </div>
           </li>
         </ul>
