--- a/src/main/resources/templates/scripts.html
+++ b/src/main/resources/templates/scripts.html
@@ -1,7 +1,9 @@
 <div th:fragment="copy" th:remove="tag">
+    <script type="text/javascript" th:src="@{/webjars/angularjs/angular.min.js}"></script>
     <script type="text/javascript" th:src="@{/webjars/jquery/1.9.1/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/messages.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/devs-util.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/app.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/fave-app.js}"></script>
 </div>
