--- a/src/main/resources/templates/header-items.html
+++ b/src/main/resources/templates/header-items.html
@@ -1,6 +1,8 @@
 <head th:fragment="copy">
     <script type="text/javascript" th:src="@{/webjars/vue/dist/vue.js}"></script>
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/font-awesome/css/font-awesome.min.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/material-design-icons/material-icons.css}" />    
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.001.css}" href="css/main.001.css" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/test-styles.css}" href="css/main.001.css" />
 </head>
