--- a/src/main/resources/templates/scripts.html
+++ b/src/main/resources/templates/scripts.html
@@ -5,5 +5,5 @@
     <script type="text/javascript" th:src="@{/javascript/messages.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/devs-util.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/app.js}"></script>
-    <script type="text/javascript" th:src="@{/javascript/fave-app.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/actor-select.js}"></script>
 </div>
