--- a/src/main/resources/templates/actors.html
+++ b/src/main/resources/templates/actors.html
@@ -8,7 +8,7 @@
     <!--  Content container -->
     <div class="jumbotron" id="continer-margin">
         <div class="container">
-            <h1 class="display-3">AngularJS Demo</h1>
+            <h1 class="display-3">Actor Browser AngularJS Demo</h1>
             <p class="lead" th:text="#{angulardemo.message}"></p>
         </div>
     </div>
@@ -23,41 +23,49 @@
             <div class='tab-pane active' id='actor'>
                 <div class='card-block'>
                     <h3 class='tab-headings'>List of All Actors</h3>
-
-                    <!-- <table class='table lead' ng-controller='ActorJsController'>
-                        <tr ng-repeat="actor in actor">
-                            <td class='lead'>{{actor.name}}</td>
-                            <td>&nbsp;</td>
-                            <td>{{actor.gender}}</td>
-                        </tr>
-                    </table> -->
                 </div>
-                <!-- Card Start -->
-                <div class="cards">
+                <!-- Cards Start -->
                 <div ng-controller='ActorJsController'>
-                    <p>Personel {{viewable.length}}</p>
-                    <input type='text' ng-model="search"></input>
+                    <div class="input-group row mb-3 col-md-6">
+                        <input type="text" ng-model="search" class="form-control" placeholder="Search Actors" aria-label="Actor Search">
+                            <div class="input-group-append">
+                                <span class="input-group-text" id="basic-addon2"><i class="fa fa-search"></i></span>
+                            </div>
+                        </input>
+                    </div>
+                    <span class="badge badge-info"><span class="align-middle">Personel {{viewable.length}}</span></span>
+                    <!-- <input type='text' ng-model="search" ></input> -->
                     <br/><br/>
-                    <div ng-repeat="a in actors | filter:search as viewable">
-                        <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="{{a.img}}"></img>
+                    <div class="cards" data-ng-repeat="a in actors  | alpha | orderBy:'name' | filter:search as viewable">
+                        <div class="card" style="width: 20rem;">
+                            <img class="card-img-top" ng-src="{{a.img}}"></img>
                             <div class="card-body">
                                 <h5 class="card-title">{{a.name}}</h5>
                                 <p class="card-text">{{a.description}}</p>
                                 <ul class="list-inline">
                                     <li class="list-inline-item">{{a.gender}}</li><li class="list-inline-item">{{a.height}}</li>
                                 </ul>
+                                <ul class="list-inline">
+                                    <li class="list-inline-item">Hair:&nbsp;<b>{{a.hair}}</b></li><li class="list-inline-item">Eyes:&nbsp;<b>{{a.eyes}}</b></li>
+                                </ul>
+                                    <span data-ng-repeat="t in a.traits" class="badge badge-secondary">{{t }} </span>
                             </div>
-                            <div class="card-body">
-                                <a href="#" class="card-link">Card link</a>
-                                <a href="#" class="card-link">Another link</a>
+                            <div class="card-link">
+                                <button type="button" class="btn btn-link btn-lg">
+                                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                                </button>
+                                <button type="button" class="btn btn-link btn-lg">
+                                    <i class="fa fa-info" aria-hidden="true"></i>
+                                </button>
+                                <button type="button" class="btn btn-link btn-lg">
+                                    <i class="fa fa-bars" aria-hidden="true"></i>
+                                </button>
                             </div>
                         </div>
                         <br/>
                     </div>
                 </div>
-            </div>
-                <!-- Card End -->
+                <!-- Cards End -->
             </div>
             <!-- <div class='tab-pane' id='films'>
                 <div class='card-block'>
