--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -23,7 +23,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" th:href="@{/help/contact}">Sub Directory</a>
-              <a class="dropdown-item" th:href="@{/actors}">Actors</a>
+              <a class="dropdown-item" th:href="@{/actors/actors}">Actors</a>
             </div>
           </li>
         </ul>
