--- a/src/main/resources/templates/scripts.html
+++ b/src/main/resources/templates/scripts.html
@@ -6,4 +6,6 @@
     <script type="text/javascript" th:src="@{/javascript/devs-util.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/app.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/actor-select.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/alpha-organizer.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/limitTo.js}"></script>
 </div>
