--- a/src/main/resources/templates/actors/actors.html
+++ b/src/main/resources/templates/actors/actors.html
@@ -39,7 +39,7 @@
 					</div>
 
 					<!-- | filter:{gender: search}:true -->
-					<div data-ng-repeat="a in actorsMale | alpha | orderBy:'name' | filter:search as viewable">
+					<div data-ng-repeat="a in actors | alpha | orderBy:'name' | filter:search as viewable">
 						<div class="col-sm-4 col-xs-12 col-lg-4 row cards">
 							<div class="card" style="width: 20rem;">
 								<div class="card-block">
