--- a/src/main/resources/templates/scripts.html
+++ b/src/main/resources/templates/scripts.html
@@ -6,6 +6,9 @@
     <script type="text/javascript" th:src="@{/javascript/devs-util.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/app.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/actor-select.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/male-actors-data.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/female-actors-data.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/alpha-organizer.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/limitTo.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/modal.controller.js}"></script>
 </div>
