--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,10 +11,10 @@
         <div class="container">
             <h1 class="display-3">State of the art medical advancement!</h1>
             <p class="lead" th:text="#{home.intro}"></p>
-            <!-- <div id="app">
+            <div id="app">
                 {{message1}}
                 <a v-bind:href="url">This link is using a v-bind:href</a>
-            </div> -->
+            </div>
         </div>
         <!-- <div class="container">
             <h1 class="display-5">Welcome to this webapp!</h1>
