--- a/src/main/resources/templates/header-items.html
+++ b/src/main/resources/templates/header-items.html
@@ -1,8 +1,16 @@
 <head th:fragment="copy">
+    <title>Web-App Dev Testing</title>
+
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
     <script type="text/javascript" th:src="@{/webjars/vue/dist/vue.js}"></script>
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/font-awesome/css/font-awesome.min.css}" />
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/material-design-icons/material-icons.css}" />    
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/material-design-icons/material-icons.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.001.css}" href="css/main.001.css" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/test-styles.css}" href="css/main.001.css" />
+
 </head>
