Update Modal Dialogue

--- a/src/main/resources/templates/scripts.html
+++ b/src/main/resources/templates/scripts.html
@@ -10,5 +10,5 @@
     <script type="text/javascript" th:src="@{/javascript/female-actors-data.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/alpha-organizer.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/limitTo.js}"></script>
-    <script type="text/javascript" th:src="@{/javascript/modal.controller.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/modal.viewer.js}"></script>
 </div>
