--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -12,7 +12,7 @@
     </div>
     <!-- / Content container. -->
 
-    <div th:replace="scripts :: copy"></div>
+    <div th:replace="footer-items :: copy"></div>
 
 </body>
 </html>
