--- a/src/main/resources/templates/help/contact.html
+++ b/src/main/resources/templates/help/contact.html
@@ -28,7 +28,7 @@
     </div>
     </div>
     <!-- / Contact container -->
-    <div th:replace="scripts :: copy"></div>
+    <div th:replace="footer-items :: copy"></div>
 
 </body>
 </html>
