--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -67,7 +67,7 @@
 
     <!-- / Content container. -->
     <div th:replace="footer :: copy"></div>
-    <div th:replace="scripts :: copy"></div>
+    <div th:replace="footer-items :: copy"></div>
 
 </body>
 
