--- a/src/main/resources/templates/footer-items.html
+++ b/src/main/resources/templates/footer-items.html
@@ -1,14 +1,15 @@
 <div th:fragment="copy" th:remove="tag">
     <script type="text/javascript" th:src="@{/webjars/angularjs/angular.min.js}"></script>
-    <script type="text/javascript" th:src="@{/webjars/jquery/1.9.1/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/angular-ui-bootstrap/ui-bootstrap.min.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/angular-ui-bootstrap/ui-bootstrap-tpls.min.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/messages.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/devs-util.js}"></script>
-    <script type="text/javascript" th:src="@{/javascript/app.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/parallax.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/actor-select.js}"></script>
-    <script type="text/javascript" th:src="@{/javascript/male-actors-data.js}"></script>
-    <script type="text/javascript" th:src="@{/javascript/female-actors-data.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/actors-data.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/alpha-organizer.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/limitTo.js}"></script>
-    <script type="text/javascript" th:src="@{/javascript/modal.controller.js}"></script>
+
 </div>
