--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -19,8 +19,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Actors Listing</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" th:href="@{/actors/actors-male}">Male Actors</a>
-              <a class="dropdown-item" th:href="@{/actors/actors-female}">Female Actors</a>
+              <a class="dropdown-item" th:href="@{/actors/actors}">All Actors</a>
             </div>
           </li>
           <li class="nav-item">
