--- a/src/main/resources/templates/actors/actorview.html
+++ b/src/main/resources/templates/actors/actorview.html
@@ -1,5 +1,5 @@
 <script type="text/ng-template" id="actorView" th:fragment="copy">
-    <div data-ng-repeat="a in actors">
+    <div>
         <!-- Modal Header -->
         <div class="card flex-row flex-wrap">
             <div class="card-header border-0  w-25 p-3">
