--- a/src/main/resources/templates/actors/actors.html
+++ b/src/main/resources/templates/actors/actors.html
@@ -49,7 +49,7 @@
             </div>
             <!-- | filter:{gender: search}:true -->
             <!--For Male Select -->
-            <div data-ng-repeat="a in actors | alpha | orderBy:myOrderBy | filter:search as viewable">
+            <div data-ng-repeat="a in actors | orderBy:myOrderBy | filter:search as viewable">
                 <div class="col-sm-4 col-12 col-lg-4 row cards">
                     <div class="card" style="width: 20rem;">
                         <div class="card-block">
