--- a/src/main/resources/templates/actors/actorview.html
+++ b/src/main/resources/templates/actors/actorview.html
@@ -23,7 +23,8 @@
             </div>
             <div class="card-footer w-100 text-muted">
                 <!-- <p>Optional Text</p> -->
-                <!-- <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="close()">Close</button> -->
+                <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="close()">Close</button>
+				<button type="button" class="btn btn-info pull-right" data-dismiss="modal" ng-click="close()">Add Person</button>
             </div>
         </div>
     </div>
