--- a/src/main/resources/templates/footer-items.html
+++ b/src/main/resources/templates/footer-items.html
@@ -7,8 +7,6 @@
     <script type="text/javascript" th:src="@{/javascript/messages.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/devs-util.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/parallax.js}"></script>
-    <script type="text/javascript" th:src="@{/javascript/actor-select.js}"></script>
-    <script type="text/javascript" th:src="@{/javascript/actors-data.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/actors.controller.js}"></script>
     <script type="text/javascript" th:src="@{/javascript/limitTo.js}"></script>
-
 </div>
