--- a/src/main/resources/templates/actors/actors.html
+++ b/src/main/resources/templates/actors/actors.html
@@ -20,12 +20,12 @@
         <!-- END MODAL HTML -->
         <div ng-controller='actorsController'>
             <script th:replace="actors/actorView  :: copy"></script>
-            <!-- <div>
+            <div>
                 <div data-ng-repeat="v in actors">
                 <p>The name is {{v.name}}</p></div>
                 <p>The ID is {{greeting.id}}</p>
                 <p>The content is {{greeting.content}}</p>
-            </div> -->
+            </div>
             <div class='card-block'>
                 <h3 class='tab-headings'>Actors Database</h3>
             </div>
