--- a/src/main/resources/static/css/actor-page-styles.css
+++ b/src/main/resources/static/css/actor-page-styles.css
@@ -1,30 +1,40 @@
 .cards {
-    height: auto;
-    float: left;
+	height: auto;
+	float: left;
 	margin-top: 15px;
 }
+
 .fade.in {
-    opacity: 1;
+	opacity: 1;
 }
+
 .modal.in .modal-dialog {
-  -webkit-transform: translate(0, 0);
-       -o-transform: translate(0, 0);
-          transform: translate(0, 0);
+	-webkit-transform: translate(0, 0);
+	-o-transform: translate(0, 0);
+	transform: translate(0, 0);
 }
+
 .modal-backdrop.in {
-    filter: alpha(opacity=50);
-    opacity: .5;
+	filter: alpha(opacity=50);
+	opacity: .5;
 }
-.modal{
-    display: block !important; /* I added this to see the modal, you don't need this */
+
+.modal {
+	display: block !important;
+	/* I added this to see the modal, you don't need this */
 }
 
 /* Important part */
-.modal-dialog{
-    overflow-y: initial !important
+
+.modal-dialog {
+	overflow-y: initial !important
 }
-.modal-body{
-    height: 250px;
-    overflow-y: auto;
+
+.modal-body {
+	height: 250px;
+	overflow-y: auto;
 }
-.modal-open {overflow-y: auto}
+
+.modal-open {
+	overflow-y: auto
+}
