--- a/src/main/resources/static/css/main.001.css
+++ b/src/main/resources/static/css/main.001.css
@@ -1,112 +1,127 @@
 /* margin used for navbar */
+
 #continer-margin {
-    margin-top: 30px;
+	margin-top: 30px;
 }
+
 .jumbotron {
-    border-radius: 0px;
-    padding-top: 15.5em;
-    padding-bottom: 15.5em;
+	border-radius: 0px;
+	padding-top: 15.5em;
+	padding-bottom: 15.5em;
 }
+
 .animation-element {
-  opacity: 0;
-  position: relative;
+	opacity: 0;
+	position: relative;
 }
+
 /*animation element sliding left*/
 
 .animation-element.slide-right {
-  opacity: 0;
-  -moz-transition: all 500ms linear;
-  -webkit-transition: all 500ms linear;
-  -o-transition: all 500ms linear;
-  transition: all 500ms linear;
-  -moz-transform: translate3d(-100px, 0px, 0px);
-  -webkit-transform: translate3d(-100px, 0px, 0px);
-  -o-transform: translate(-100px, 0px);
-  -ms-transform: translate(-100px, 0px);
-  transform: translate3d(-100px, 0px, 0px);
+	opacity: 0;
+	-moz-transition: all 500ms linear;
+	-webkit-transition: all 500ms linear;
+	-o-transition: all 500ms linear;
+	transition: all 500ms linear;
+	-moz-transform: translate3d(-100px, 0px, 0px);
+	-webkit-transform: translate3d(-100px, 0px, 0px);
+	-o-transform: translate(-100px, 0px);
+	-ms-transform: translate(-100px, 0px);
+	transform: translate3d(-100px, 0px, 0px);
 }
 
 .animation-element.slide-right.in-view {
-  opacity: 1;
-  -moz-transform: translate3d(0px, 0px, 0px);
-  -webkit-transform: translate3d(0px, 0px, 0px);
-  -o-transform: translate(0px, 0px);
-  -ms-transform: translate(0px, 0px);
-  transform: translate3d(0px, 0px, 0px);
+	opacity: 1;
+	-moz-transform: translate3d(0px, 0px, 0px);
+	-webkit-transform: translate3d(0px, 0px, 0px);
+	-o-transform: translate(0px, 0px);
+	-ms-transform: translate(0px, 0px);
+	transform: translate3d(0px, 0px, 0px);
 }
+
 .animation-element.slide-right.testimonial {
-  float: right;
-  right: 0px;
-  width: 70%;
-  height: 70%;
-  background: transparent;
-  background-image: url("../images/brand.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  padding: 0px;
+	float: right;
+	right: 0px;
+	width: 70%;
+	height: 70%;
+	background: transparent;
+	background-image: url("../images/brand.png");
+	background-size: contain;
+	background-repeat: no-repeat;
+	padding: 0px;
 }
 
 .background {
-    margin: 0;
-    background-size: cover;
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../images/img4.jpg") no-repeat center center fixed;
-    background-blend-mode: darken;
-    transition: 3s;
+	margin: 0;
+	background-size: cover;
+	background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/img4.jpg") no-repeat center center fixed;
+	background-blend-mode: darken;
+	transition: 3s;
 }
+
 .background2 {
-    margin: 0;
-    height: 400px;
-    background-size: cover;
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../images/img1.jpg") no-repeat right center fixed;
-    background-blend-mode: darken;
-    transition: 3s;
+	margin: 0;
+	height: 400px;
+	background-size: cover;
+	background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/img1.jpg") no-repeat right center fixed;
+	background-blend-mode: darken;
+	transition: 3s;
 }
+
 .background3 {
-    margin: 0;
-    background-size: contain;
-    background: linear-gradient( rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0) ), url("../images/img5.jpg") no-repeat left center fixed;
-    background-blend-mode: darken;
-    transition: 3s;
-
+	margin: 0;
+	background-size: contain;
+	background: linear-gradient( rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url("../images/img5.jpg") no-repeat left center fixed;
+	background-blend-mode: darken;
+	transition: 3s;
 }
-.background4 {
-    margin: 0;
-    background-size: contain;
-    background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url("../images/suit.jpg") no-repeat center top fixed;
-    background-blend-mode: darken;
-    transition: 3s;
 
+.background4 {
+	margin: 0;
+	background-size: contain;
+	background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/suit.jpg") no-repeat center top fixed;
+	background-blend-mode: darken;
+	transition: 3s;
 }
 
 .product-device-2 {
-  top: -25%;
-  right: auto;
-  bottom: 0;
-  left: 5%;
-  background-color: #e5e5e5;
+	top: -25%;
+	right: auto;
+	bottom: 0;
+	left: 5%;
+	background-color: #e5e5e5;
 }
-
 
 /*
  * Extra utilities
  */
 
-.border-top { border-top: 1px solid #e5e5e5; }
-.border-bottom { border-bottom: 1px solid #e5e5e5; }
-
-.box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
-
-.flex-equal > * {
-  -ms-flex: 1;
-  -webkit-box-flex: 1;
-  flex: 1;
+.border-top {
+	border-top: 1px solid #e5e5e5;
 }
+
+.border-bottom {
+	border-bottom: 1px solid #e5e5e5;
+}
+
+.box-shadow {
+	box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+
+.flex-equal>* {
+	-ms-flex: 1;
+	-webkit-box-flex: 1;
+	flex: 1;
+}
+
 @media (min-width: 768px) {
-  .flex-md-equal > * {
-    -ms-flex: 1;
-    -webkit-box-flex: 1;
-    flex: 1;
-  }
+	.flex-md-equal>* {
+		-ms-flex: 1;
+		-webkit-box-flex: 1;
+		flex: 1;
+	}
 }
 
-.overflow-hidden { overflow: hidden; }
+.overflow-hidden {
+	overflow: hidden;
+}
