Local JSON read

--- a/src/main/resources/templates/actors/actorview.html
+++ b/src/main/resources/templates/actors/actorview.html
@@ -24,7 +24,7 @@
 			<div class="card-footer w-100 text-muted">
 				<!-- <p>Optional Text</p> -->
 				<button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="close()">Close</button>
-				<button type="button" class="btn btn-info pull-right" data-dismiss="modal" ng-click="close()">Add Person</button>
+				<button type="button" class="btn btn-info pull-right" data-dismiss="modal" ng-click="add()">Add Person</button>
 			</div>
 		</div>
 	</div>
