--- a/src/main/resources/templates/header-items.html
+++ b/src/main/resources/templates/header-items.html
@@ -11,6 +11,6 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/webjars/font-awesome/css/font-awesome.min.css}" />
 	<link rel="stylesheet" type="text/css" th:href="@{/webjars/material-design-icons/material-icons.css}" />
 	<link rel="stylesheet" type="text/css" th:href="@{/css/main.001.css}" href="css/main.001.css" />
-	<link rel="stylesheet" type="text/css" th:href="@{/css/actor-page-styles.css}" href="css/main.001.css" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/actor-page-overrides.css}" href="css/main.001.css" />
 
 </head>
