RestController and SQL Table

--- a/src/main/resources/templates/footer-items.html
+++ b/src/main/resources/templates/footer-items.html
@@ -8,5 +8,6 @@
 	<script type="text/javascript" th:src="@{/javascript/devs-util.js}"></script>
 	<script type="text/javascript" th:src="@{/javascript/parallax.js}"></script>
 	<script type="text/javascript" th:src="@{/javascript/actors.controller.js}"></script>
-	<script type="text/javascript" th:src="@{/javascript/limitTo.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/actors.controller.js}"></script>
+	<script type="text/javascript" th:src="@{/javascript/formcontroller.js}"></script>
 </div>
