--- a/src/main/resources/templates/actors/actors.html
+++ b/src/main/resources/templates/actors/actors.html
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div class="container">
-        <div ng-controller='actorsController'>
+        <div ng-controller='actorsController' ng-init="init()">
             <script th:replace="actors/actorView  :: copy"></script>
             <div class='card-block'>
                 <h3 class='tab-headings'>Actors Database</h3>
@@ -48,7 +48,7 @@
                             <img class="card-img-top" ng-src="{{a.img}}"></img>
                             <div class="card-body extend">
                                 <h5 class="card-title">{{a.name}}</h5>
-                                <p ng-controller="limit" class="card-text" ng-model="letterLimit">{{a.description | limitTo:letterLimit}} <a href="" ng-click="view(a)">...</a></p>
+                                <p class="card-text">{{a.description | limitTo:140}} <a href="" ng-click="view(a)">...</a></p>
                                 <ul class="list-inline">
                                     <li class="list-inline-item">{{a.gender}}</li>
                                     <li class="list-inline-item">{{a.height}}</li>
