--- a/src/main/resources/templates/actors/actorview.html
+++ b/src/main/resources/templates/actors/actorview.html
@@ -1,4 +1,4 @@
-<script type="text/ng-template" id="actorView" th:fragment="copy">
+<script type="text/ng-template" id="actorview" th:fragment="copy">
     <div>
         <!-- Modal Header -->
         <div class="card flex-row flex-wrap">
@@ -24,7 +24,7 @@
             <div class="card-footer w-100 text-muted">
                 <!-- <p>Optional Text</p> -->
                 <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="close()">Close</button>
-                <button type="button" class="btn btn-info pull-right" data-dismiss="modal" ng-click="add()">Select Actor</button>
+                <button type="button" class="btn btn-disabled pull-right" data-dismiss="modal" >Select Actor</button>
             </div>
         </div>
     </div>
