--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -19,8 +19,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Actor Listing</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" th:href="@{/actors/actors}">All Actors</a>
-                        <a class="dropdown-item" th:href="@{/actors/actors-form}">Actors Form</a>
+                        <a class="dropdown-item" th:href="@{/actors/actors}">Actors Database</a>
                     </div>
                 </li>
                 <li class="nav-item">
