--- a/src/main/resources/static/css/actor-page-overrides.css
+++ b/src/main/resources/static/css/actor-page-overrides.css
@@ -40,3 +40,47 @@
 .modal-open {
     overflow-y: auto
 }
+
+.profile-pic {
+    max-width: 150px;
+    max-height: 150px;
+    position: absolute;
+    left: -8px;
+    display: block;
+}
+
+.file-upload {
+    display: none;
+}
+.circle {
+    border-radius: 20px !important;
+    overflow: hidden;
+    width: 150px;
+    height: 150px;
+    border: 8px solid rgba(000, 000, 000, 0.2);
+    position: absolute;
+    top: 30px;
+    left: 0px;
+}
+img {
+    max-width: 100%;
+    height: auto;
+}
+.p-image {
+  position: absolute;
+  top: 160px;
+  right: 20px;
+  color: #666666;
+  transition: all .3s cubic-bezier(.175, .885, .32, 1.275);
+}
+.p-image:hover {
+  transition: all .3s cubic-bezier(.175, .885, .32, 1.275);
+}
+.upload-button {
+  font-size: 1.2em;
+}
+.upload-button:hover {
+  transition: all .3s cubic-bezier(.175, .885, .32, 1.275);
+  color: #999;
+  cursor: pointer;
+}
