--- a/src/main/resources/templates/actors/editactor.html
+++ b/src/main/resources/templates/actors/editactor.html
@@ -66,7 +66,7 @@
             </div>
             <div class="card-footer w-100 text-muted">
                 <button type="button" class="btn btn-danger" ng-click="close()">Close</button>
-                <button type="button" class="btn btn-info pull-right">Add Actor</button>
+                <button type="button" class="btn btn-info pull-right" ng-click="save()">Save</button>
             </div>
         </div>
     </div>
